--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/bottom-tabs": "^7.0.7",
     "@react-navigation/drawer": "^7.0.5",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/stack": "^7.0.4",
@@ -19,7 +20,8 @@
     "react-native-gesture-handler": "^2.21.2",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^4.1.0"
+    "react-native-screens": "^4.1.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
